# Sigma

./: .gitignore  CLAUDE.md  README.md  SIGMA_HowTo.pptx  config.json  make_slides.py  start.sh
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/01-server-data-pipeline/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-core-viewer/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-UI-SPEC.md
.planning/phases/03-segmentation-display-labels/: 03-01-SUMMARY.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-UAT.md  03-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: api.js  main.js  styles.css
client/src/ui/: appShell.js  (+4 more)
inference-server/: README.md  pyproject.toml  server.py
models/: ai-models.json
server/: main.py  pyproject.toml
server/api/: ai.py  config.py  segmentations.py  volumes.py  ws.py
server/catalog/: models.py
server/loaders/: dicom_loader.py  dicom_seg_writer.py  nifti_loader.py
server/tests/: test_api_versioning.py  test_auto_window.py  test_debouncer.py  test_dicom_seg_writer.py  test_dicom_uids.py  test_seg_discovery.py  test_seg_loader.py  test_wado.py  test_watcher.py  test_ws.py
server/watcher/: __init__.py  debouncer.py  observer.py
(+38 files in other folders)
